# Locallibrary

./: .env.example  Dockerfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  ruff.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_language_library_book_language_bookinstance_library.py  0003_alter_author_options.py  0004_alter_bookinstance_options_bookinstance_borrower.py
catalog/templates/: base_generic.html  index.html
catalog/templates/catalog/: author_detail.html  author_list.html
catalog/tests/: test_forms.py  test_views.py
locallibrary/: settings.py  urls.py
